SERVER-41368 mongocryptd terminates with backtrace when reusing unix domain socket across instances

GitOrigin-RevId: 2bbd9fba8ac07088d0686fa6ec6566ce54dbbc86